Added Functionality for Work Logs
* Added tables, models, DTOs, etc to handle additional and basic retrieval of work logs
* Fixed references to old package names for API clients
* Removed old OpenAPI config
