# server/src/main/java/org/example/todo/tasks/controller/TaskController.java
@@ -4,9 +4,11 @@ import io.swagger.annotations.Api;
 import lombok.extern.slf4j.Slf4j;
 import org.example.todo.tasks.generated.controller.TaskManagementApi;
 import org.example.todo.tasks.generated.dto.ResponseContainerTaskDto;
+import org.example.todo.tasks.generated.dto.ResponseContainerWorkLogEntryDto;
 import org.example.todo.tasks.generated.dto.TaskCreationRequest;
 import org.example.todo.tasks.generated.dto.TaskDto;
 import org.example.todo.tasks.service.TaskService;
+import org.example.todo.tasks.service.WorkLogService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.ResponseEntity;
@@ -23,6 +25,8 @@ import java.util.UUID;
 public class TaskController implements TaskManagementApi {
 
 	private TaskService taskService;
+
+	private WorkLogService workLogService;
 
 	@Override
 	public ResponseEntity<ResponseContainerTaskDto> createTask(@Valid TaskCreationRequest taskCreationRequest) {
@@ -49,8 +53,27 @@ public class TaskController implements TaskManagementApi {
 		return ResponseEntity.ok(taskService.updateTaskResponse(taskDto));
 	}
 
+	/**
+	 * GET /v1/tasks/{uuid}/worklogs : Get a specific task&#39;s information
+	 *
+	 * @param uuid Task uuid to get task object with (required)
+	 * @return OK (status code 200)
+	 * or Client Error (status code 400)
+	 * or Not Found (status code 404)
+	 * or Internal error has occurred (status code 500)
+	 */
+	@Override
+	public ResponseEntity<ResponseContainerWorkLogEntryDto> getWorkLogsForTaskUuid(UUID uuid) {
+		return ResponseEntity.ok(workLogService.getWorkLogEntriesForTaskUuidResponse(uuid));
+	}
+
 	@Autowired
 	public void setTaskService(TaskService taskService) {
 		this.taskService = taskService;
+	}
+
+	@Autowired
+	public void setWorkLogService(WorkLogService workLogService) {
+		this.workLogService = workLogService;
 	}
 }
